
[tool.poetry]
name = "get_oracle_a1"
version = "0.2.1"
description = ""
authors = ["Byeonghoon Yoo <bh322yoo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
oci = "^2.78.0"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.6"
flake8 = "^5.0.4"

[tool.poetry.scripts]
get_oracle_a1 = 'get_oracle_a1:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
skip-string-normalization = true