
[tool.poetry]
name = "get_oracle_a1"
version = "0.3.0"
description = ""
authors = ["Byeonghoon Yoo <bh322yoo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
oci = "^2.112.2"
pydantic = "^1.10.10"

[tool.poetry.scripts]
get_oracle_a1 = 'get_oracle_a1:main'

[tool.poetry.group.dev.dependencies]
flake8-pyproject = "^1.2.3"
black = "^23.7.0"
flake8 = "^6.1.0"
flake8-black = "^0.3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flake8]
ignore = ['E203', 'W503']
per-file-ignores = [
    '__init__.py:F401',
]
max-line-length = 120
count = true